<resources>
    <string name="app_name">StarStore</string>
    <string name="errorDownloadProducts">Nenhum registro encontrado.</string>
    <string name="notProductsInCart">Nenhum produto no carrinho.</string>
    <string name="produtos">Produtos</string>
    <string name="txtSubtract">-</string>
    <string name="txtSum">+</string>
    <string name="zeroValue">0</string>
    <string name="txtCarrinho">Carrinho</string>
    <string name="txtPagamento">Pagamento</string>
    <string name="txtGratis">GRÁTIS</string>
    <string name="txtCardNumber">Número do cartão</string>
    <string name="txtCardName">Nome igual do cartão</string>
    <string name="txtPay">Finalizar compra</string>
    <string name="txtCvv">CVV</string>
    <string name="txtValidade">Validade</string>
    <string name="errorCardNumber">Digite um número válido.</string>
    <string name="errorCardName">Digite um nome válido.</string>
    <string name="errorCardExpirationDate">Digite uma data de validade válida.</string>
    <string name="errorCardCvv">Digite um CVV válido.</string>
    <string name="txtPurchases">Compras</string>
    <string name="txtCreated">Data da compra</string>
    <string name="txtBuyer">Comprador</string>
    <string name="txtLastDigits">Final do cartão</string>
    <string name="txtTotalValue">Valor total</string>
    <string name="txtNotPurchases">Nenhuma compra finalizada</string>
    <string name="txtMenuHome">Início</string>
    <string name="txtMenuCart">Carrinho</string>
    <string name="txtMenuPurchases">Compras feitas</string>
    <string name="openMenu">Abrir</string>
    <string name="closeMenu">Fechar</string>
    <string name="txtHelloVisitor">Olá, Visitante</string>
    <string name="txtThankYou">Obrigado por comprar conosco!</string>
    <string name="txtOrderSending">Nossa equipe já está separando e empacotando seu pedido. Logo ele será despachado em uma de nossas X-Wings.</string>
    <string name="txtHome">Início</string>
</resources>
