<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.starstore.hugo.victor.starstore.ThankYouActivity">

    <ImageView
        android:layout_width="@dimen/space_80"
        android:layout_height="@dimen/space_80"
        android:layout_gravity="center"
        android:layout_margin="@dimen/space_20"
        android:src="@drawable/ic_icon_check_circle_green" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/space_20"
        android:text="@string/txtThankYou"
        android:textSize="@dimen/space_20" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="@dimen/space_20"
        android:paddingRight="@dimen/space_20"
        android:text="@string/txtOrderSending"
        android:textSize="@dimen/space_20" />

    <Button
        android:id="@+id/btBackToHome"
        android:layout_width="@dimen/space_130"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/space_80"
        android:background="@drawable/btn_corners"
        android:onClick="backToHome"
        android:text="@string/txtHome"
        android:textSize="@dimen/txt_space_18" />

</LinearLayout>
