<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.starstore.hugo.victor.starstore.activity.PaymentActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_20"
        android:layout_marginRight="@dimen/space_20"
        android:layout_marginTop="@dimen/space_10"
        android:fontFamily="@font/font_star_jedi"
        android:text="@string/txtPagamento"
        android:textSize="@dimen/txt_space_30" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/space_20"
        android:layout_marginTop="@dimen/space_10"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="Frete:"
                android:textSize="@dimen/txt_space_22"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/txtGratis"
                android:textSize="@dimen/txt_space_20"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="Valor total: "
                android:textSize="@dimen/txt_space_22"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textSize="@dimen/txt_space_16"
                android:textStyle="bold"
                tools:text="R$1.375,00" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_40"
                android:theme="@style/tiColors">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tiCardNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="1234567890"
                    android:hint="@string/txtCardNumber"
                    android:inputType="number"
                    android:maxLength="16" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/tiColors">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tiCardName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtCardName"
                    android:inputType="textCapCharacters" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:theme="@style/tiColors">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/tiCardExpirationDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="1234567890"
                        android:hint="@string/txtValidade"
                        android:inputType="number"
                        android:maxLength="5" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:theme="@style/tiColors">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/tiCardCvv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="1234567890"
                        android:hint="@string/txtCvv"
                        android:inputType="number"
                        android:maxLength="4" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/btPagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="@dimen/space_10"
                android:text="@string/txtPay"
                android:textColor="@color/colorIcons"
                app:spinning_bar_color="@color/colorIcons"
                app:spinning_bar_padding="@dimen/space_6"
                app:spinning_bar_width="@dimen/space_4" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
