<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="horizontal">

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/img_produto"
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:civ_border_color="#FF000000"
        app:civ_border_width="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nome_produto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="@dimen/card_product_title_size"
            tools:text="Titulo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/vendedor_produto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="@dimen/card_product_seller_size"
                    tools:text="Vendedor do produto" />

                <TextView
                    android:id="@+id/preco_produto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/card_product_seller_size"
                    tools:text="R$ 14,99" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llQuantidadeCarrinho"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tvQtdeProdutoCarrinho"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:textSize="@dimen/card_product_seller_size"
                    tools:text="10" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="horizontal"
                android:visibility="gone">

                <Button
                    android:id="@+id/btnDiminuir"
                    style="@style/btnAlterCart"
                    android:background="@drawable/btn_corners"
                    android:text="@string/txtSubtract" />

                <TextView
                    android:id="@+id/tvQuantidade"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    tools:text="@string/zeroValue" />

                <Button
                    android:id="@+id/btnAumentar"
                    style="@style/btnAlterCart"
                    android:background="@drawable/btn_corners"
                    android:text="@string/txtSum" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>